<resources>
    <string name="app_name">YeelightApp</string>
    <string name="add_new_lamp">Add new Lamp</string>
    <string name="list_of_lamps">List of Lamps</string>
    <string name="welcome">WELCOME</string>
    <string name="if_you_want_to_click_add_new_lamp_you_have_to_know_ip_of_your_lamp">If you want to click Add new Lampyou have to know IP of your Lamp</string>
    <string name="textview">TextView</string>
    <string name="select">Select</string>
    <string name="name_of_lamp">Name of Lamp</string>
    <string name="name">Name</string>
    <string name="ip">IP</string>
    <string name="choose_a_lamp">Choose A Lamp</string>
    <string name="brightness">Brightness</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="adjust_the_lamp">Adjust the Lamp</string>
    <string name="red">Red</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_lamp_s_name_and_ip">Please, enter Lamp\'s name and IP</string>
    <string name="about">About</string>
    <string name="modes">Modes</string>
    <string name="lorem_ipsum_lorem_ipsum_xvi_lorem_ipsum_lorem_ipsum_letraset_lorem_ipsum_60_aldus_pagemaker_lorem_ipsum">Lorem Ipsum - это текст-рыба, часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной рыбой для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</string>
</resources>